<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity"
    android:background="@color/colorGary">

    <com.test.pythontest2.SimpleUVCCameraTextureView
        android:id="@+id/camera__view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/camera_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:contentDescription="@string/camera"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_camera" />
        <Button
            android:id="@+id/camera_takePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_picture"/>
        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"/>

        <ImageView
            android:id="@+id/camera_imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
    </LinearLayout>
</RelativeLayout>